--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -3,9 +3,9 @@
 <h1>Orders Overview</h1>
 <section class="orders-overview-filters">
   <ul>
-    <li>Filter by [Customer]</li>
-    <li>Search [Customer]</li>
-    <li>Select Delivery [Date]</li>
+    <li>Filter by [Customer dropdown]</li>
+    <li>Search [Customer search box]</li>
+    <li>Select Delivery [Date dropdown]</li>
   </ul>
 </section>
 <section class="all-orders">
@@ -20,7 +20,7 @@
     <li>Order #
       <ul>
         <% @orders.each do |order|%>
-          <li> <%= order.id %> </li>
+          <li> <a href="<%= vendor_order_url(order.id, order.vendor_id) %>"><%= order.id %></a></li>
         <% end %>
       </ul></li>
     <li>Total Items
