--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,4 +1,5 @@
 <h1> <%= @order.vendor.name %> </h1>
+<h4><a href="<%= vendor_orders_url(@order.vendor) %>">< Back to All Orders</a></h4>
 <h1> Customer: <%= @order.customer.name %> </h1>
 <h3> Order #<%= @order.id %> </h3>
 
@@ -13,5 +14,4 @@
     <li>Total</li>
     <li>Out of Stock</li>
   </ul>
-
 </section>
