--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -25,5 +25,11 @@
       <td> <input type="checkbox"></td>
     </tr>
   <% end %>
+  <tfoot>
+    <tr>
+      <td><button class="add-to-order">Update Order</button></td>
+      <td><button class="add-to-order">Approve Order</button></td>
+    </tr>
+  </tfoot>
 
 </table>
