--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -14,12 +14,12 @@
     <th>Total</th>
     <th>Out of Stock</th>
   </tr>
-  <% @order.products.each do |product| %>
+  <% @order.line_items.each do |line_item| %>
     <tr>
-      <td><%= product.name %></td>
-      <td>product.sku</td>
+      <td><%= line_item.product.name %></td>
+      <td><%=line_item.variant.sku %></td>
       <td>product.pack_size</td>
-      <td> - <input type="text" placeholder="QTY"></input> + </td>
+      <td> - <input type="text" value="<%=line_item.quantity%>" placeholder="QTY"></input> + </td>
       <td>product.price</td>
       <td> total </td>
       <td> <input type="checkbox"></td>
