Format order total to currency

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -24,7 +24,7 @@
       <td><%= order.customer.name %></td>
       <td><a href="<%= vendor_order_url(order.id, order.vendor_id) %>"><%= order.id %></a></td>
       <td><%=order.item_count%></td>
-      <td><%=order.total%></td>
+      <td><%=number_to_currency(order.total)%></td>
       <td>order.status</td>
       <td>
         <!-- remove quotes and change to order.status when set up -->
