link product catalog

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -6,6 +6,7 @@
 
 <h5>Manufacturer: </h5>
 
+<a href="<%= vendor_products_url(@product.vendor_id) %>">Back to Catalog</a>
 <div class="group">
   <div class="product-left">
     <img src="", alt="Image not Available">
