--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -53,5 +53,5 @@
   </table>
 
   <button class="add-to-order">Add to Order</button>
-  
+  <a href="<%= edit_vendor_product_url(@product.vendor_id, @product.id) %>">Edit Product</a>
 </section>
