--- a/app/views/spree/manage/orders/show.html.erb
+++ b/app/views/spree/manage/orders/show.html.erb
@@ -1,5 +1,5 @@
 <h1> <%= @order.vendor.name %> </h1>
-<h4><a href="<%= vendor_orders_url(@order.vendor) %>">Back to All Orders</a></h4>
+<h4><a href="<%= manage_orders_url %>">Back to All Orders</a></h4>
 <h1> Customer: <%= @order.customer.name %> </h1>
 <h3> Order #<%= @order.id %> </h3>
 <h4>Order status: <%= @order.state %></h4>
@@ -26,7 +26,7 @@
   				</thead>
 					
 					<tbody id="line_items" data-hook>
-						<%= render partial: 'orders/line_item', collection: order_form.object.line_items, locals: { order_form: order_form } %>
+						<%= render partial: 'line_item', collection: order_form.object.line_items, locals: { order_form: order_form } %>
 					</tbody>
 
 					<% if @order.adjustments.nonzero.exists? || @order.line_item_adjustments.nonzero.exists? || @order.shipment_adjustments.nonzero.exists? || @order.shipments.any? %>
