--- a/app/views/spree/manage/products/edit.html.erb
+++ b/app/views/spree/manage/products/edit.html.erb
@@ -1,4 +1,4 @@
-<form action="" method="post">
+<form action="<%=manage_product_url(@product.id)%>" method="post">
   <input type="hidden" name="_method" value="patch">
   <input type="hidden" name="authenticity_token" value="<%=form_authenticity_token%>">
 
@@ -52,31 +52,14 @@
         <th>SKU</th>
         <th>Pack/Size</th>
         <th>Price</th>
+        <th></th>
       </tr>
       <% @product.variants_including_master.each do |variant| %>
         <tr>
-          <td><input type="text" name=variant[sku] value="<%=variant.sku %>"></td>
-          <td><input type="text" name=variant[pack_size] value=""</td>
-          <td>$<input type="text" name=variant[price] value="<%= variant.price %>"></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>
-            <label><input type="checkbox" name="" value=""></label>Promotional<br>
-            <label>Start Date<select name="">
-              <option value="value1">Date 1</option>
-              <option value="value2">Date 2</option>
-              <option value="value3">Date 3</option>
-            </select></label>
-          </td>
-          <td>
-            <label>Promo Price: $<input type="text" name="" value="<%= variant.price %>"></label><br>
-            <label>End Date<select name="">
-              <option value="value1">Date 1</option>
-              <option value="value2">Date 2</option>
-              <option value="value3">Date 3</option>
-            </select></label>
-          </td>
+          <td><%=variant.sku %></td>
+          <td>variant.pack_size</td>
+          <td><%= number_to_currency(variant.price) %></td>
+          <td><a href="<%=edit_manage_product_variant_url(@product.id, variant.id)%>">Edit Variant</a></td>
         </tr>
       <% end %>
     </table>
