Variant edit and new

--- a/app/views/spree/manage/products/edit.html.erb
+++ b/app/views/spree/manage/products/edit.html.erb
@@ -62,6 +62,9 @@
           <td><a href="<%=edit_manage_product_variant_url(@product.id, variant.id)%>">Edit Variant</a></td>
         </tr>
       <% end %>
+      <tr>
+        <td><a href="<%= new_manage_product_variant_url(@product.id) %>">Add New Variant</a></td>
+      </tr>
     </table>
 
   </section>
