--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -6,7 +6,7 @@
 
 <h5>Manufacturer: </h5>
 
-<a href="<%= vendor_products_url(@product.vendor_id) %>">Back to Catalog</a>
+<a href="<%= vendor_products_url(@product.vendor) %>">Back to Catalog</a>
 <div class="group">
   <div class="product-left">
     <img src="", alt="Image not Available">
