Fix auth requirements bug

--- a/app/views/spree/manage/products/index.html.erb
+++ b/app/views/spree/manage/products/index.html.erb
@@ -6,7 +6,7 @@
 <button class=search>Search</button>
 
 <h3> Product Guide </h3>
-Current order: <%= @current_order.number %> <!-- DEBUG -->
+Current order: <%#= @current_order.number %> <!-- DEBUG -->
 <table>
   <colgroup span="7"></colgroup>
   <tr>
