--- a/app/views/spree/admin/shared/_main_menu.html.erb
+++ b/app/views/spree/admin/shared/_main_menu.html.erb
@@ -7,14 +7,14 @@
 <% if can? :admin, Spree::Vendor %>
   <ul class="nav nav-sidebar">
     <%#= main_menu_tree Spree.t(:products), icon: "th-large", sub_menu: "product", url: "#sidebar-product" %>
-    <%= tab *Spree::BackendConfiguration::VENDOR_TABS, icon: 'shopping-cart' %>
+    <%= tab *Spree::BackendConfiguration::VENDOR_TABS, icon: 'briefcase' %>
   </ul>
 <% end %>
 
 <% if can? :admin, Spree::Customer %>
   <ul class="nav nav-sidebar">
     <%#= main_menu_tree Spree.t(:products), icon: "th-large", sub_menu: "product", url: "#sidebar-product" %>
-    <%= tab *Spree::BackendConfiguration::CUSTOMER_TABS, icon: 'shopping-cart' %>
+    <%= tab *Spree::BackendConfiguration::CUSTOMER_TABS, icon: 'cutlery' %>
   </ul>
 <% end %>
 
