--- a/app/views/spree/layouts/manage.html.erb
+++ b/app/views/spree/layouts/manage.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="<%= I18n.locale %>">
   <head data-hook="manage_inside_head">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <%= render partial: 'spree/manage/shared/head' %>
   </head>
 
@@ -11,7 +12,7 @@
     <%#-------------------------------------------------%>
     <%# Loading progress bars                           %>
     <%#-------------------------------------------------%>
-		
+
 		<div id="progress">
       <div class="alert alert-info alert-progress">
         <div class="spinner"><%= Spree.t(:loading) %>...</div>
@@ -23,7 +24,7 @@
     <%#-------------------------------------------------%>
     <%# Header navbar                                   %>
     <%#-------------------------------------------------%>
-    <%= render partial: 'spree/manage/shared/header' %>
+    <%#= render partial: 'spree/manage/shared/header' %>
 
     <%#-------------------------------------------------%>
     <%# Main content                                    %>
