--- a/app/views/spree/manage/shared/_header.html.erb
+++ b/app/views/spree/manage/shared/_header.html.erb
@@ -1,32 +1,15 @@
-<% admin = try_spree_current_user.try(:has_spree_role?, "admin") %>
-
-<header class="header <%= admin ? "logged-in" : "logged-out" %>">
-
-  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="navbar-header col-sm-3 col-md-2">
-          <%= link_to(
-            image_tag(Spree::Config[:admin_interface_logo], id: 'logo'),
-            spree.admin_path,
-            class: "logo navbar-brand"
-          ) %>
-          <% if admin %>
-            <span class="navbar-toggle" id="sidebar-toggle">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </span>
-          <% end %>
-        </div>
-
-        <% if admin %>
-          <div class="col-sm-9 col-md-10">
-            <div class="navbar-right" data-hook="admin_login_navigation_bar"></div>
-          </div>
-        <% end %>
-      </div>
+<header class="header">
+  <div class="logo"></div>
+  <div class="header-nav">
+    <div class="nav-ico"></div>
+    <div id="sb-search" class="search-ico sb-search">
+      <form>
+        <span class="sb-icon-search"><i class="fa fa-search sb-icon-search"></i> </span>
+        <input class="sb-search-input" placeholder="Enter your search term..." type="text" value="" name="search" id="search">
+        <input class="sb-search-submit" type="submit" value="">
+      </form>
     </div>
-  </nav>
-
+    <div class="exit-ico"><i class="fa fa-sign-out"></i></div>
+    <div class="settings-ico"><i class="fa fa-cog"></i></div>
+  </div>
 </header>
